# gbenchmark-example

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  add.cpp  add.h  asymptotic_complexity.cpp  basic_usage.cpp  custom_counters.cpp  custom_statics.cpp  exit_with_error.cpp  fixtures.cpp  getting_started.cpp  manual_timing.cpp  memory_usage.cpp  minimum.cpp  multithreaded.cpp  pass_arguments.cpp  setup_teardown.cpp  templated.cpp
test/: CMakeLists.txt
tool/cmake/: enable_memcheck.cmake  install_gbenchmark.cmake  install_gtest.cmake  set_compile_props.cmake
